5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1723_2497.log
== TEST (2019-05-09 10:39:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	rend = saldo * juroS
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	renda = saldo * (juros*qi*tempo)
	saldo = saldo + renda
	t = 

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:42:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	renda = saldo * (juros*qi*tempo)
	saldo = saldo + renda
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo<=TEMPO):
	renda = saldo * ((tempo-tempo+1)*juros)
	print(round(renda, 2))
	saldo = saldo + renda
	t = renda

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(tempo<=TEMPO):
NameError: name 'TEMPO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo<=tempo):
	renda = saldo * ((tempo-tempo+1)*juros)
	print(round(renda, 2))
	saldo = saldo + renda
	t = renda

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	print(round(renda, 2))
	saldo = saldo + renda
	t = tempo-tempo+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
0.0
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:57:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	saldo = saldo + renda
	t = (tempo - tempo) + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
0.0
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:58:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	saldo = saldo + renda
	t = (tempo - tempo) + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
0.0
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	saldo = saldo + renda
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
1249.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	print(renda)
	saldo = saldo + renda
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
0.0
23.01
47.8608
77.534496
115.78484736
167.88802867200002
241.75876128768
1249.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	print(renda)
	saldo = saldo + renda
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
47.8608
77.534496
115.78484736
167.88802867200002
241.75876128768
1249.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	
	saldo = saldo + renda
	print(saldo)
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
646.1208
723.655296
839.44014336
1007.328172032
1249.08693331968
1249.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	
	saldo = saldo + renda
	print(round(saldo, 2)
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 19
    t = t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	
	saldo = saldo + renda
	print(round(saldo, 2)
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 19
    t = t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
646.12
723.66
839.44
1007.33
1249.09
1249.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:02:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * ((t)*juros)
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.252081
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
646.12
723.66
839.44
1007.33
1249.09
1249.09
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
927.09
1038.34
1038.34
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1432.81
1604.75
1861.51
2233.81
2233.81
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:02:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.0297158
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.0280509
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.0262711
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.0328209
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.024935
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.0285451
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.0342069
-- ERROR:
Error response from daemon: Container 31c73b7a3bd56e8951e1e69f4c9c265f487982deddada7c5af5ccbdf3f4079b1 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:04:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:06:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 1

# Atualizacao de saldo
while(t<=tempo):
	renda = saldo * juros
	saldo = saldo + renda
	print(round(saldo, 2))
	t = t+1



	

-- EXECUTION TIME:
0.153329
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
